--- a/ui/app/templates/components/config-pki.hbs
+++ b/ui/app/templates/components/config-pki.hbs
@@ -14,7 +14,7 @@
   </p>
 {{/if}}
 
-<MessageError @model={{this.config}} />
+<MessageError @model={{this.config}} @errors={{this.errors}} />
 <form {{action "save" this.section on="submit"}} class="box is-shadowless is-marginless is-fullwidth has-slim-padding">
   {{#each (get this.config (concat this.section "Attrs")) as |attr|}}
     <FormField @attr={{attr}} @model={{this.config}} @data-test-field={{attr.name}} />
