--- a/ui/app/templates/vault/cluster/secrets/backend/list.hbs
+++ b/ui/app/templates/vault/cluster/secrets/backend/list.hbs
@@ -34,7 +34,7 @@
     </div>
   </div>
 {{else}}
-  {{#with (options-for-backend this.backendType this.tab) as |options|}}
+  {{#let (options-for-backend this.backendType this.tab) as |options|}}
     {{#if (or this.model.meta.total (not this.isConfigurableTab))}}
       <Toolbar>
         {{#if this.model.meta.total}}
@@ -170,5 +170,5 @@
         {{/if}}
       {{/if}}
     {{/if}}
-  {{/with}}
+  {{/let}}
 {{/if}}
