--- a/ui/app/templates/components/generated-item-list.hbs
+++ b/ui/app/templates/components/generated-item-list.hbs
@@ -17,7 +17,7 @@
     </h1>
   </p.levelLeft>
 </PageHeader>
-{{#with (tabs-for-auth-section this.methodModel "authConfig" this.paths) as |tabs|}}
+{{#let (tabs-for-auth-section this.methodModel "authConfig" this.paths) as |tabs|}}
   {{#if tabs.length}}
     <div class="tabs-container box is-sideless is-fullwidth is-paddingless is-marginless">
       <nav class="tabs">
@@ -33,7 +33,7 @@
       </nav>
     </div>
   {{/if}}
-{{/with}}
+{{/let}}
 <Toolbar>
   <ToolbarActions>
     <ToolbarLink
