--- a/ui/app/templates/components/secret-list-header.hbs
+++ b/ui/app/templates/components/secret-list-header.hbs
@@ -1,4 +1,4 @@
-{{#with (options-for-backend @model.engineType) as |options|}}
+{{#let (options-for-backend @model.engineType) as |options|}}
   <PageHeader as |p|>
     <p.top>
       <KeyValueHeader @baseKey={{@baseKey}} @path="vault.cluster.secrets.backend.list" @root={{@backendCrumb}}>
@@ -79,4 +79,4 @@
       </nav>
     </div>
   {{/if}}
-{{/with}}
+{{/let}}
