--- a/ui/app/templates/components/section-tabs.hbs
+++ b/ui/app/templates/components/section-tabs.hbs
@@ -1,4 +1,4 @@
-{{#with (tabs-for-auth-section this.model this.tabType this.paths) as |tabs|}}
+{{#let (tabs-for-auth-section this.model this.tabType this.paths) as |tabs|}}
   {{#if tabs.length}}
     <div class="tabs-container box is-sideless is-fullwidth is-paddingless is-marginless">
       <nav class="tabs">
@@ -14,4 +14,4 @@
       </nav>
     </div>
   {{/if}}
-{{/with}}
+{{/let}}
