--- a/ui/app/templates/components/transit-key-action/encrypt.hbs
+++ b/ui/app/templates/components/transit-key-action/encrypt.hbs
@@ -16,7 +16,7 @@
           @title="Plaintext"
           @value={{@plaintext}}
           @valueUpdated={{action (mut @plaintext)}}
-          @options={{hash mode="ruby"}}
+          @mode="ruby"
           @data-test-transit-input="plaintext"
         />
       </div>
