--- a/ui/app/templates/components/secret-form-show.hbs
+++ b/ui/app/templates/components/secret-form-show.hbs
@@ -33,7 +33,7 @@
       <JsonEditor
         @title={{if @isV2 "Version Data" "Secret Data"}}
         @value={{@modelForData.dataAsJSONString}}
-        @options={{hash readOnly=true}}
+        @readOnly={{true}}
       />
     </div>
   {{else}}
