--- a/ui/app/templates/vault/cluster/policies/create.hbs
+++ b/ui/app/templates/vault/cluster/policies/create.hbs
@@ -56,13 +56,15 @@
       {{#if this.showFileUpload}}
         <TextFile @inputOnly={{true}} @file={{this.file}} @onChange={{action "setPolicyFromFile"}} />
       {{else}}
+        {{! ARG TODO confirm his works }}
         <JsonEditor
           @title="Policy"
           @helpText="You can use Alt+Tab (Option+Tab on MacOS) in the code editor to skip to the next field"
           @showToolbar={{false}}
           @value={{this.model.policy}}
           @valueUpdated={{action (mut this.model.policy)}}
-          @options={{hash mode="ruby" extraKeys=(hash Shift-Enter=(action "savePolicy" this.model))}}
+          @mode="ruby"
+          @extraKeys={{hash Shift-Enter=(action "savePolicy" this.model)}}
         />
       {{/if}}
     </div>
