--- a/ui/app/styles/components/masked-input.scss
+++ b/ui/app/styles/components/masked-input.scss
@@ -48,7 +48,7 @@
   min-width: $spacing-xl;
   border-left: 0;
   color: $grey;
-  box-shadow: 0 3px 1px 0px rgba(10, 10, 10, 0.12);
+  box-shadow: 0 3px 1px 0px rgba($token-black, 0.12);
 }
 
 .button.copy-button {
