--- a/ui/app/styles/components/vault-loading.scss
+++ b/ui/app/styles/components/vault-loading.scss
@@ -14,7 +14,7 @@
   polygon {
     animation: vault-loading-animation 1.3s infinite ease-in-out;
     transform-origin: 50% 50%;
-    fill: #dce2e9;
+    fill: $ui-gray-200;
   }
 
   .vault-loading-order-1 {
