--- a/ui/app/styles/components/auth-form.scss
+++ b/ui/app/styles/components/auth-form.scss
@@ -12,7 +12,7 @@
   left: -1px;
   right: -1px;
   bottom: -1px;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba($token-white, 0.8);
   z-index: 10;
   display: flex;
   justify-content: center;
