--- a/ui/app/styles/components/modal.scss
+++ b/ui/app/styles/components/modal.scss
@@ -73,8 +73,8 @@ pre {
 }
 
 .modal-card-foot-outlined {
-  background: #f7f8fa;
-  border-top: 1px solid #bac1cc;
+  background: $ui-gray-050;
+  border-top: 1px solid $ui-gray-300;
 }
 
 .modal-radio-button {
