--- a/ui/app/styles/components/vlt-table.scss
+++ b/ui/app/styles/components/vlt-table.scss
@@ -7,7 +7,7 @@
   &.sticky-header {
     thead th {
       position: sticky;
-      background: #fff;
+      background: $vault-gray-010;
       box-shadow: 0 1px 0px 0px rgba($grey-dark, 0.3);
       top: 0;
     }
