--- a/ui/app/styles/core/charts.scss
+++ b/ui/app/styles/core/charts.scss
@@ -197,7 +197,7 @@ p.data-details {
 // MISC STYLES
 
 .light-dot {
-  background-color: #bfd4ff;
+  background-color: $blue-100;
   height: 10px;
   width: 10px;
   border-radius: 50%;
@@ -205,7 +205,7 @@ p.data-details {
 }
 
 .dark-dot {
-  background-color: #1563ff;
+  background-color: $blue-500;
   height: 10px;
   width: 10px;
   border-radius: 50%;
