Revert "remove options"
This reverts commit 39c46c0eac4fc582753cecc294dbf4ff0808ed0b.

--- a/ui/app/templates/components/transit-key-action/decrypt.hbs
+++ b/ui/app/templates/components/transit-key-action/decrypt.hbs
@@ -8,7 +8,7 @@
         <JsonEditor
           @title="Ciphertext"
           @valueUpdated={{action (mut @ciphertext)}}
-          @mode="ruby"
+          @options={{hash mode="ruby"}}
           @data-test-transit-input="ciphertext"
         />
       </div>
