--- a/ui/app/templates/vault/cluster/policy/show.hbs
+++ b/ui/app/templates/vault/cluster/policy/show.hbs
@@ -42,8 +42,7 @@
       @title="Policy"
       @subTitle={{if (eq this.policyType "acl") (concat this.uppercase this.model.format " format")}}
       @value={{this.model.policy}}
-      @readOnly={{true}}
-      @mode="ruby"
+      @options={{hash readOnly=true mode="ruby"}}
     />
   </div>
   {{#if this.model.paths}}
