--- a/ui/app/templates/components/console/log-json.hbs
+++ b/ui/app/templates/components/console/log-json.hbs
@@ -2,11 +2,7 @@
   <JsonEditor
     @showToolbar={{false}}
     @value={{stringify this.content}}
-    @gutters={{false}}
-    @lineNumber={{false}}
-    @readOnly={{true}}
-    @theme="hashi auto-height"
-    @viewportMargin="Infinity"
+    @options={{hash readOnly=true lineNumbers=false autoHeight=true gutters=false theme="hashi auto-height"}}
   />
   <HoverCopyButton @copyValue={{stringify this.content}} />
 </div>
