--- a/ui/app/templates/components/control-group-success.hbs
+++ b/ui/app/templates/components/control-group-success.hbs
@@ -17,11 +17,7 @@
           data-test-json-viewer
           @showToolbar={{false}}
           @value={{stringify this.unwrapData}}
-          @readOnly={{true}}
-          @lineNumbers={{false}}
-          @viewportMargin="Infinity"
-          @gutters={{false}}
-          @theme="hashi-read-only auto-height"
+          @options={{hash readOnly=true lineNumbers=false autoHeight=true gutters=false theme="hashi-read-only auto-height"}}
         />
         <HoverCopyButton @copyValue={{stringify this.unwrapData}} />
       </div>
