--- a/ui/app/templates/components/transit-key-action/hmac.hbs
+++ b/ui/app/templates/components/transit-key-action/hmac.hbs
@@ -11,7 +11,12 @@
     <KeyVersionSelect @key={{@key}} @onVersionChange={{action (mut @key_version)}} @key_version={{@key_version}} />
     <div class="field">
       <div id="input-control" class="control is-relative">
-        <JsonEditor @title="Input" @valueUpdated={{action (mut @input)}} @mode="ruby" @data-test-transit-input="input" />
+        <JsonEditor
+          @title="Input"
+          @valueUpdated={{action (mut @input)}}
+          @options={{hash mode="ruby"}}
+          @data-test-transit-input="input"
+        />
       </div>
     </div>
     <div class="field">
