--- a/ui/app/templates/components/transit-key-action/sign.hbs
+++ b/ui/app/templates/components/transit-key-action/sign.hbs
@@ -28,7 +28,7 @@
           @title="Input"
           @value={{@input}}
           @valueUpdated={{action (mut @input)}}
-          @mode="ruby"
+          @options={{hash mode="ruby"}}
           @data-test-transit-input="input"
         />
       </div>
