--- a/ui/app/templates/vault/cluster/policies/create.hbs
+++ b/ui/app/templates/vault/cluster/policies/create.hbs
@@ -62,7 +62,8 @@
           @showToolbar={{false}}
           @value={{this.model.policy}}
           @valueUpdated={{action (mut this.model.policy)}}
-          @options={{hash mode="ruby" extraKeys=(hash Shift-Enter=(action "savePolicy" this.model))}}
+          @mode="ruby"
+          @extraKeys={{hash Shift-Enter=(action "savePolicy" this.model)}}
         />
       {{/if}}
     </div>
