--- a/ui/app/templates/components/json-editor.hbs
+++ b/ui/app/templates/components/json-editor.hbs
@@ -35,18 +35,10 @@
       readOnly=@readOnly
       theme=@theme
       viewportMarg=@viewportMargin
+      onUpdate=this.update
+      onFocus=this.focus
     }}
-    {{!-- @valueUpdated={{action "updateValue"}}
-    @onFocusOut={{action "onFocus"}} --}}
   ></div>
-
-  {{!-- <IvyCodemirror
-    @data-test-component="json-editor"
-    @value={{@value}}
-    @options={{this.options}}
-    @valueUpdated={{action "updateValue"}}
-    @onFocusOut={{action "onFocus"}}
-  /> --}}
 
   {{#if @helpText}}
     <div class="box is-shadowless is-fullwidth has-short-padding">
