--- a/ui/app/styles/components/codemirror.scss
+++ b/ui/app/styles/components/codemirror.scss
@@ -51,7 +51,7 @@ $gutter-grey: #2a2f36;
 .cm-s-hashi {
   &.CodeMirror {
     background-color: $black !important;
-    resize: vertical; 
+    resize: vertical;
     color: #cfd2d1 !important;
     border: none;
     font-family: $family-monospace;
@@ -168,8 +168,8 @@ $gutter-grey: #2a2f36;
 }
 
 .readonly-codemirror {
-  .CodeMirror-cursors {
-    display: none;
+  .CodeMirror-code {
+    cursor: pointer;
   }
 
   .cm-s-hashi {
