--- a/ui/app/templates/components/json-editor.hbs
+++ b/ui/app/templates/components/json-editor.hbs
@@ -28,7 +28,7 @@
       content=@value
       extraKeys=@extraKeys
       gutters=@gutters
-      lineNumbers=@lineNumbers
+      lineNumbers=(if @readOnly false true)
       mode=@mode
       readOnly=@readOnly
       theme=@theme
