test coverage for json editor

--- a/ui/app/templates/components/json-editor.hbs
+++ b/ui/app/templates/components/json-editor.hbs
@@ -37,6 +37,7 @@
       onFocus=this.focus
     }}
     class={{if @readOnly "readonly-codemirror"}}
+    data-test-component="code-mirror-modifier"
   ></div>
 
   {{#if @helpText}}
