--- a/ui/app/templates/components/json-editor.hbs
+++ b/ui/app/templates/components/json-editor.hbs
@@ -33,8 +33,8 @@
       readOnly=@readOnly
       theme=@theme
       viewportMarg=@viewportMargin
-      onUpdate=this.update
-      onFocus=this.focus
+      onUpdate=this.onUpdate
+      onFocus=this.onFocus
     }}
     class={{if @readOnly "readonly-codemirror"}}
     data-test-component="code-mirror-modifier"
