--- a/ui/app/styles/utils/_colors.scss
+++ b/ui/app/styles/utils/_colors.scss
@@ -6,17 +6,17 @@ $token-black: var(--token-color-vault-brand-alt); // black #000000
 $token-white: var(--token-color-palette-neutral-0); // white #fffff
 
 // Vault Gray
-$vault-gray-010: #fdfdfe;
-$vault-gray-050: #f7fafc;
-$vault-gray-100: #ebeef5;
-$vault-gray-200: #d3dbe6;
-$vault-gray-300: #b4bdcc;
-$vault-gray-400: #949fb0;
+$vault-gray-010: $token-white;
+$vault-gray-050: var(--token-color-palette-neutral-50); // unused
+$vault-gray-100: #ebeef5; // unused
+$vault-gray-200: #d3dbe6; // unused
+$vault-gray-300: #b4bdcc; // unused
+$vault-gray-400: #949fb0; // unused
 $vault-gray-500: #7c8797;
-$vault-gray-600: #5a6370;
+$vault-gray-600: #5a6370; // unused
 $vault-gray-700: #3c434d;
-$vault-gray-800: #1d2126;
-$vault-gray-900: #060708;
+$vault-gray-800: #1d2126; // unused
+$vault-gray-900: #060708; // unused
 $vault-gray: $vault-gray-500;
 $vault-gray-dark: $vault-gray-700;
 
@@ -42,10 +42,10 @@ $grey-darkest: $ui-gray-900;
 $blue-010: #fbfcff;
 $blue-050: #f0f5ff;
 $blue-100: #bfd4ff;
-$blue-300: #5b92ff;
+$blue-300: #5b92ff; // unused
 $blue-500: #1563ff;
-$blue-700: #0e40a3;
-$blue-900: #061b46;
+$blue-700: #0e40a3; // unused
+$blue-900: #061b46; // unused
 $blue-lightest: $blue-050;
 $blue-light: $blue-300;
 $blue: $blue-500;
@@ -55,16 +55,16 @@ $blue-darkest: $blue-900;
 // Red
 $red-010: #fdfafb;
 $red-050: #f9ecee;
-$red-100: #efc7cc;
-$red-300: #db7d88;
+$red-100: #efc7cc; // unused
+$red-300: #db7d88; // unused
 $red-500: #c73445;
 $red-700: #7f222c;
-$red-900: #370f13;
-$red-lightest: $red-050;
-$red-light: $red-300;
+$red-900: #370f13; // unused
+$red-lightest: $red-050; // unused
+$red-light: $red-300; // unused
 $red: $red-500;
 $red-dark: $red-700;
-$red-darkest: $red-900;
+$red-darkest: $red-900; // unused
 
 // Green
 $green-010: #fafdfa;
@@ -73,37 +73,37 @@ $green-100: #c6e9c9;
 $green-300: #7acc81;
 $green-500: #2eb039;
 $green-700: #1e7125;
-$green-900: #0d3010;
+$green-900: #0d3010; // unused
 $green-lightest: $green-050;
 $green-light: $green-300;
 $green: $green-500;
 $green-dark: $green-700;
-$green-darkest: $green-900;
+$green-darkest: $green-900; // unused
 
 // Orange
-$orange-010: #fffcfa;
-$orange-050: #fef4ec;
-$orange-100: #fde0c8;
-$orange-300: #fbb77f;
-$orange-500: #fa8f37;
+$orange-010: #fffcfa; // unused
+$orange-050: #fef4ec; // unused
+$orange-100: #fde0c8; // unused
+$orange-300: #fbb77f; // unused
+$orange-500: #fa8f37; // unused
 $orange-700: #a05c23;
-$orange-900: #45270f;
-$orange-lightest: $orange-050;
-$orange-light: $orange-300;
-$orange: $orange-500;
-$orange-dark: $orange-700;
-$orange-darkest: $orange-900;
+$orange-900: #45270f; // unused
+$orange-lightest: $orange-050; // unused
+$orange-light: $orange-300; // unused
+$orange: $orange-500; // unused
+$orange-dark: $orange-700; // unused
+$orange-darkest: $orange-900; // unused
 
 // Yellow
 $yellow-010: #fffdf6;
-$yellow-050: #fffbed;
+$yellow-050: #fffbed; // unused
 $yellow-100: #fdeeba;
-$yellow-300: #fbd95e;
+$yellow-300: #fbd95e; // unused
 $yellow-500: #fac402;
-$yellow-700: #a07d02;
+$yellow-700: #a07d02; // unused
 $yellow-900: #453601;
-$yellow-lightest: $yellow-050;
-$yellow-light: $yellow-300;
+$yellow-lightest: $yellow-050; // unused
+$yellow-light: $yellow-300; // unused
 $yellow: $yellow-500;
 $yellow-dark: $yellow-700;
 $yellow-darkest: $yellow-900;
