--- a/ui/app/styles/components/empty-state.scss
+++ b/ui/app/styles/components/empty-state.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   padding: $spacing-xxl $spacing-s;
-  box-shadow: 0 -2px 0 -1px $ui-gray-300;
+  box-shadow: 0 -2px 0 -1px $grey-light;
 }
 
 .empty-state-transparent {
