--- a/ui/app/styles/components/info-table-row.scss
+++ b/ui/app/styles/components/info-table-row.scss
@@ -47,10 +47,10 @@
     margin-right: 0.25rem;
   }
   .icon-true {
-    color: $green-500;
+    color: $green;
   }
   .icon-false {
-    color: $ui-gray-300;
+    color: $grey-light;
   }
 
   a {
