--- a/ui/app/styles/components/list-item-row.scss
+++ b/ui/app/styles/components/list-item-row.scss
@@ -14,7 +14,7 @@
     margin-left: auto;
     font-size: $size-8;
     font-weight: $font-weight-semibold;
-    color: $ui-gray-500;
+    color: $grey;
   }
 }
 
