--- a/ui/app/styles/components/stat-text.scss
+++ b/ui/app/styles/components/stat-text.scss
@@ -15,7 +15,7 @@
     .stat-text {
       font-size: $size-8;
       font-weight: $font-weight-normal;
-      color: $ui-gray-700;
+      color: $grey-dark;
       line-height: inherit;
     }
     .stat-value {
@@ -34,7 +34,7 @@
     .stat-text {
       font-size: $size-8;
       font-weight: $font-weight-normal;
-      color: $ui-gray-700;
+      color: $grey-dark;
       line-height: inherit;
     }
     .stat-value {
@@ -53,7 +53,7 @@
     .stat-text {
       font-size: $size-8;
       font-weight: $font-weight-normal;
-      color: $ui-gray-700;
+      color: $grey-dark;
       line-height: inherit;
     }
     .stat-value {
@@ -72,7 +72,7 @@
     .stat-text {
       font-size: $size-8;
       font-weight: $font-weight-normal;
-      color: $ui-gray-700;
+      color: $grey-dark;
       line-height: inherit;
     }
     .stat-value {
@@ -86,13 +86,13 @@
     .stat-label {
       font-size: $size-8;
       font-weight: $font-weight-normal;
-      color: $ui-gray-500;
+      color: $grey;
       line-height: inherit;
     }
     .stat-text {
       font-size: $size-8;
       font-weight: $font-weight-normal;
-      color: $ui-gray-700;
+      color: $grey-dark;
       line-height: inherit;
     }
     .stat-value {
