--- a/ui/app/styles/components/transit-card.scss
+++ b/ui/app/styles/components/transit-card.scss
@@ -32,7 +32,7 @@
   }
 
   &:hover {
-    box-shadow: 0 0 0 1px $blue-500, $box-shadow-middle;
+    box-shadow: 0 0 0 1px $blue, $box-shadow-middle;
     background: $blue-010;
 
     .title {
