--- a/ui/app/styles/components/calendar-widget.scss
+++ b/ui/app/styles/components/calendar-widget.scss
@@ -67,17 +67,17 @@
       border-radius: 2px;
     }
     &.is-current-month {
-      border: 1px solid $ui-gray-900;
+      border: 1px solid $grey-darkest;
     }
     &:hover {
-      background-color: $vault-gray-500;
+      background-color: $vault-gray;
       color: white;
       text-align: center;
       cursor: pointer;
     }
     &.is-readOnly {
       background-color: $ui-gray-100;
-      color: $vault-gray-500;
+      color: $vault-gray;
       pointer-events: none;
     }
   }
@@ -110,7 +110,7 @@
 
 // for modal-dialog tooltips
 .calendar-tooltip {
-  background-color: $ui-gray-700;
+  background-color: $grey-dark;
   color: white;
   font-size: $size-8;
   padding: $size-9;
