--- a/ui/app/templates/components/auth-info.hbs
+++ b/ui/app/templates/components/auth-info.hbs
@@ -62,18 +62,15 @@
             {{/if}}
           {{/if}}
           <li class="action">
-            {{! invokeAction is provided by ember-link-action addon -- should consider removing in favor of on modifier }}
-            {{! template-lint-disable no-unknown-arguments-for-builtin-components }}
             <LinkTo
               @route="vault.cluster.logout"
               @model={{@activeClusterName}}
               id="logout"
               class="is-destroy"
-              @invokeAction={{@onLinkClick}}
+              {{on "click" @onLinkClick}}
             >
               Sign out
             </LinkTo>
-            {{! template-lint-enable }}
           </li>
         </ul>
       </nav>
