--- a/ui/app/templates/components/secret-version-menu.hbs
+++ b/ui/app/templates/components/secret-version-menu.hbs
@@ -17,12 +17,7 @@
         {{#each (reverse @model.versions) as |secretVersion|}}
           <li class="action">
             {{! invokeAction is provided by ember-link-action addon -- should consider removing in favor of on modifier }}
-            {{! template-lint-disable no-unknown-arguments-for-builtin-components }}
-            <LinkTo
-              class="link"
-              @params={{array (query-params version=secretVersion.version)}}
-              @invokeAction={{action D.actions.close}}
-            >
+            <LinkTo class="link" @query={{hash version=secretVersion.version}} {{on "click" D.actions.close}}>
               Version
               {{secretVersion.version}}
               {{#if
@@ -37,7 +32,6 @@
                 <Icon @name="x-square-fill" class="has-text-grey is-pulled-right" />
               {{/if}}
             </LinkTo>
-            {{! template-lint-enable }}
           </li>
         {{/each}}
         <li class="action">
