--- a/ui/app/styles/utils/_colors.scss
+++ b/ui/app/styles/utils/_colors.scss
@@ -107,3 +107,7 @@ $yellow-light: $yellow-300; // unused
 $yellow: $yellow-500;
 $yellow-dark: $yellow-700;
 $yellow-darkest: $yellow-900;
+
+// Black (for browser CLI console)
+$gradient-darker: #191a1c;
+$gradient-lighter: #1b212d;
