--- a/ui/app/templates/components/identity/item-alias/alias-details.hbs
+++ b/ui/app/templates/components/identity/item-alias/alias-details.hbs
@@ -21,11 +21,11 @@
 </InfoTableRow>
 <InfoTableRow @label="Created" @value={{@model.creationTime}}>
   <time datetime={{@model.creationTime}} title={{@model.creationTime}}>
-    {{date-format @model.creationTime "MMM dd, yyyy [at] h:mm a"}}
+    {{date-format @model.creationTime "MMM dd, yyyy h:mm a"}}
   </time>
 </InfoTableRow>
 <InfoTableRow @label="Last Updated" @value={{@model.lastUpdateTime}}>
   <time datetime={{@model.lastUpdateTime}} title={{@model.lastUpdateTime}}>
-    {{date-format @model.lastUpdateTime "MMM dd, yyyy [at] h:mm a"}}
+    {{date-format @model.lastUpdateTime "MMM dd, yyyy h:mm a"}}
   </time>
 </InfoTableRow>
