--- a/ui/app/templates/components/identity/item-details.hbs
+++ b/ui/app/templates/components/identity/item-details.hbs
@@ -27,12 +27,12 @@
   </InfoTableRow>
   <InfoTableRow @label="Created" @value={{@model.creationTime}}>
     <time datetime={{@model.creationTime}} title={{@model.creationTime}}>
-      {{date-format @model.creationTime "MMM dd, yyyy [at] h:mm a"}}
+      {{date-format @model.creationTime "MMM dd, yyyy h:mm a"}}
     </time>
   </InfoTableRow>
   <InfoTableRow @label="Last Updated" @value={{this.model.lastUpdateTime}}>
     <time datetime={{this.model.lastUpdateTime}} title={{this.model.lastUpdateTime}}>
-      {{date-format this.model.lastUpdateTime "MMM dd, yyyy [at] h:mm a"}}
+      {{date-format this.model.lastUpdateTime "MMM dd, yyyy h:mm a"}}
     </time>
   </InfoTableRow>
 </div>
