Remove Ivy Codemirror (#14659)
* setup

* fix mode issue

* actions

* readonly styling

* remove ivycodemirror from package json

* wip

* test coverage for json editor

* text fixes

* fix tests

* fix cursor issue

* changelog

* clean up

* fix

* address pr comments

* unused css and it overides other styling.

* fix

* fix comment

--- a/ui/app/templates/components/json-editor.hbs
+++ b/ui/app/templates/components/json-editor.hbs
@@ -23,14 +23,22 @@
       </Toolbar>
     </div>
   {{/if}}
-
-  <IvyCodemirror
-    @data-test-component="json-editor"
-    @value={{@value}}
-    @options={{this.options}}
-    @valueUpdated={{action "updateValue"}}
-    @onFocusOut={{action "onFocus"}}
-  />
+  <div
+    {{code-mirror
+      content=@value
+      extraKeys=@extraKeys
+      gutters=@gutters
+      lineNumbers=(if @readOnly false true)
+      mode=@mode
+      readOnly=@readOnly
+      theme=@theme
+      viewportMarg=@viewportMargin
+      onUpdate=this.onUpdate
+      onFocus=this.onFocus
+    }}
+    class={{if @readOnly "readonly-codemirror"}}
+    data-test-component="code-mirror-modifier"
+  ></div>
 
   {{#if @helpText}}
     <div class="box is-shadowless is-fullwidth has-short-padding">
