--- a/ui/app/templates/components/control-group-success.hbs
+++ b/ui/app/templates/components/control-group-success.hbs
@@ -17,7 +17,10 @@
           data-test-json-viewer
           @showToolbar={{false}}
           @value={{stringify this.unwrapData}}
-          @options={{hash readOnly=true lineNumbers=false autoHeight=true gutters=false theme="hashi-read-only auto-height"}}
+          @readOnly={{true}}
+          @viewportMargin="Infinity"
+          @gutters={{false}}
+          @theme="hashi-read-only auto-height"
         />
         <HoverCopyButton @copyValue={{stringify this.unwrapData}} />
       </div>
