change vault-grays to ui-grays

--- a/ui/app/styles/utils/_colors.scss
+++ b/ui/app/styles/utils/_colors.scss
@@ -12,13 +12,13 @@ $vault-gray-100: #ebeef5; // unused
 $vault-gray-200: #d3dbe6; // unused
 $vault-gray-300: #b4bdcc; // unused
 $vault-gray-400: #949fb0; // unused
-$vault-gray-500: #7c8797;
+$vault-gray-500: #7c8797; // unused
 $vault-gray-600: #5a6370; // unused
-$vault-gray-700: #3c434d;
+$vault-gray-700: #3c434d; // unused
 $vault-gray-800: #1d2126; // unused
 $vault-gray-900: #060708; // unused
-$vault-gray: $vault-gray-500;
-$vault-gray-dark: $vault-gray-700;
+$vault-gray: $ui-gray-500;
+$vault-gray-dark: $ui-gray-800;
 
 // UI Gray
 $ui-gray-010: #fbfbfc;
