backport of commit 90ac146be4c459a6bbb4c15bedf0ded495496226

--- a/ui/app/templates/components/secret-create-or-update.hbs
+++ b/ui/app/templates/components/secret-create-or-update.hbs
@@ -192,7 +192,7 @@
               <div class="column is-one-quarter">
                 <Input
                   data-test-secret-key={{true}}
-                  @value={{if (eq @canReadSecretData true) secret.name}}
+                  @value={{secret.name}}
                   placeholder="key"
                   {{on "change" (action "handleChange")}}
                   class="input"
@@ -205,7 +205,7 @@
                   @name={{secret.name}}
                   @onKeyDown={{action "handleKeyDown"}}
                   @onChange={{action "handleChange"}}
-                  @value={{if (eq @canReadSecretData true) secret.value}}
+                  @value={{secret.value}}
                   data-test-secret-value="true"
                 />
               </div>
