--- a/ui/lib/replication/addon/templates/components/path-filter-config-list.hbs
+++ b/ui/lib/replication/addon/templates/components/path-filter-config-list.hbs
@@ -45,7 +45,7 @@
         class="radio"
         @value="allow"
         @groupValue={{this.config.mode}}
-        @onChange={{queue (action (mut this.config.mode))}}
+        @onChange={{fn (mut this.config.mode)}}
       />
       <label for="allow"></label>
     </div>
@@ -64,12 +64,12 @@
     </div>
     <div class="radio-card-radio-row">
       <RadioButton
+        id="deny"
+        name="config-mode"
+        class="radio"
         @value="deny"
-        @radioClass="radio"
         @groupValue={{this.config.mode}}
-        @changed={{queue (action (mut this.config.mode))}}
-        @name="config-mode"
-        @radioId="deny"
+        @onChange={{fn (mut this.config.mode)}}
       />
       <label for="deny"></label>
     </div>
