--- a/ui/app/templates/components/raft-join.hbs
+++ b/ui/app/templates/components/raft-join.hbs
@@ -30,28 +30,28 @@
         <br />
         How do you want to get started?
       </h2>
-      <RadioButton
-        @value="join"
-        @groupValue={{this.preference}}
-        @changed={{action (mut this.preference)}}
-        @name="setup-pref"
-        @radioId="join"
-        @classNames="vlt-radio is-block"
-      >
+      <div class="vlt-radio is-block">
+        <RadioButton
+          id="join"
+          name="setup-pref"
+          @value="join"
+          @groupValue={{this.preference}}
+          @onChange={{fn (mut this.preference)}}
+        />
         <label for="join"></label>
         Join an existing Raft cluster
-      </RadioButton>
-      <RadioButton
-        @value="init"
-        @groupValue={{this.preference}}
-        @changed={{action (mut this.preference)}}
-        @name="setup-pref"
-        @radioId="init"
-        @classNames="vlt-radio is-block"
-      >
+      </div>
+      <div class="vlt-radio is-block">
+        <RadioButton
+          id="init"
+          name="setup-pref"
+          @value="init"
+          @groupValue={{this.preference}}
+          @onChange={{fn (mut this.preference)}}
+        />
         <label for="init" data-test-join-init></label>
         Create a new Raft cluster
-      </RadioButton>
+      </div>
     </div>
     <div class="box is-marginless is-shadowless">
       <button type="submit" class="button is-primary" data-test-next>
